--- a/src/server/languages/en.json
+++ b/src/server/languages/en.json
@@ -10,9 +10,10 @@
     "sound": "Sound:",
     "music": "Music:",
     "languageSelectorText": "Select Language",
-    "easy": "Easy",
-    "medium": "Medium",
-    "hard": "Hard",
+    "niv1": "Niveau 1",
+    "niv2": "Niveau 2",
+    "niv3": "Niveau 3",
+    "niv4": "Niveau 4",
     "difficultyText": "Difficulty:",
     "waitingPlayer":"Waiting for players...",
     "skipVotesText":"Skip votes:",
