--- a/src/server/languages/es.json
+++ b/src/server/languages/es.json
@@ -10,9 +10,10 @@
     "sound": "Sonido:",
     "music": "Música:",
     "languageSelectorText": "Seleccione el idioma",
-    "easy": "fácil",
-    "medium": "medio",
-    "hard": "dura",
+    "niv1": "Nivel 1",
+    "niv2": "Nivel 2",
+    "niv3": "Nivel 3",
+    "niv4": "Nivel 4",
     "difficultyText": "dificultad:",
     "waitingPlayer":"Esperando a los jugadoras ...",
     "skipVotesText":"saltar votos:",
