--- a/src/server/languages/fr.json
+++ b/src/server/languages/fr.json
@@ -10,9 +10,10 @@
     "sound": "Son:",
     "music": "Musique:",
     "languageSelectorText": "Choisir la langue",
-    "easy": "Facile",
-    "medium": "Moyen",
-    "hard": "Dure",
+    "niv1": "Niveau 1",
+    "niv2": "Niveau 2",
+    "niv3": "Niveau 3",
+    "niv4": "Niveau 4",
     "difficultyText": "Difficulté:",
     "waitingPlayer": "j'attends les joueurs...",
     "skipVotesText":"Sauter des votes:",
