--- a/src/server/languages/gl.json
+++ b/src/server/languages/gl.json
@@ -10,9 +10,10 @@
     "sound": "ᓭ𝙹⚍リ↸:",
     "music": "ᒲ⚍ᓭ╎ᓵ:",
     "languageSelectorText": "ᓭᒷꖎᒷᓵℸ ̣  ꖎᔑリ⊣⚍ᔑ⊣ᒷ",
-    "easy": "ᒷᔑᓭ||",
-    "medium": "ᒲᒷ↸╎⚍ᒲ",
-    "hard": "⍑ᔑ∷↸",
+    "niv1": "Niveau 1",
+    "niv2": "Niveau 2",
+    "niv3": "Niveau 3",
+    "niv4": "Niveau 4",
     "difficultyText": "↸╎⎓⎓╎ᓵ⚍ꖎℸ ̣ ||:",
     "waitingPlayer":"∴ᔑ╎ℸ ̣ ╎リ⊣ ⎓𝙹∷ !¡ꖎᔑ||ᒷ∷ᓭ...",
     "skipVotesText":"ᓭꖌ╎!¡ ⍊𝙹ℸ ̣ ᒷᓭ:",
