--- a/src/server/languages/nl.json
+++ b/src/server/languages/nl.json
@@ -10,9 +10,10 @@
     "sound": "Geluid:",
     "music": "Muziek:",
     "languageSelectorText": "Selecteer Taal",
-    "easy": "Makkelijk",
-    "medium": "Gemiddeld",
-    "hard": "Moeilijk",
+    "niv1": "Niveau 1",
+    "niv2": "Niveau 2",
+    "niv3": "Niveau 3",
+    "niv4": "Niveau 4",
     "difficultyText": "Moeilijkheidsgraad",
     "waitingPlayer":"Wachten voor spelers...",
     "skipVotesText":"Stemmen voor overslaan:",
