--- a/src/server/languages/pl.json
+++ b/src/server/languages/pl.json
@@ -10,9 +10,10 @@
     "sound": "dźwięk:",
     "music": "Muzyka:",
     "languageSelectorText": "Wybierz język",
-    "easy": "Prosty",
-    "medium": "Przeciętny",
-    "hard": "trudny",
+    "niv1": "Poziom 1",
+    "niv2": "Poziom 2",
+    "niv3": "Poziom 3",
+    "niv4": "Poziom 4",
     "difficultyText": "Trudność",
     "waitingPlayer":"Czekaci na graczy...",
     "skipVotesText":"Głosuj na pominięcie:",
